--- a/app/src/main/res/layout/activity_getstarted.xml
+++ b/app/src/main/res/layout/activity_getstarted.xml
@@ -31,7 +31,7 @@
         <ImageView
             android:layout_width="300dp"
             android:layout_height="300dp"
-            android:src="@drawable/ic_logout"/>
+            android:src="@drawable/img_getstarted_illustration"/>
         <View
             android:layout_width="wrap_content"
             android:layout_height="40dp"/>
