--- a/app/src/main/res/layout/activity_hotelsignform.xml
+++ b/app/src/main/res/layout/activity_hotelsignform.xml
@@ -135,7 +135,7 @@
                     android:id="@+id/hotelImagePreview"
                     android:layout_width="100dp"
                     android:layout_height="60dp"
-                    android:src="@drawable/ic_add"
+                    android:src="@drawable/img_defaultimage"
                     android:layout_marginTop="8dp"
                     android:scaleType="centerCrop"/>
 
