Minor Frontend Changes

--- a/frontend/tourio/src/pages/touraddpage/touraddpage.css
+++ b/frontend/tourio/src/pages/touraddpage/touraddpage.css
@@ -3,8 +3,8 @@
  
   --accent-color: #4ecdc4;
   --background-light: #f4f5f7;
-  --text-dark: #2c3e50;
-  --text-light: #576574;
+  --text-dark: #ffffff;
+  --text-light: #ffffff;
   --border-color: #bdc3c7;
   --transition-speed: 0.3s;
   --border-radius: 10px;
