--- a/frontend/tourio/src/pages/paymentpage/paymentpage.css
+++ b/frontend/tourio/src/pages/paymentpage/paymentpage.css
@@ -1,6 +1,6 @@
 /* General Styles */
 body {
-    background: linear-gradient(to right, #00c6ff, #0072ff);
+    background: linear-gradient(to right, #ffffff, #ffffff);
     font-family: 'Poppins', sans-serif;
   }
   
