--- a/mobile/GAHDSE241F-tourio/app/src/main/res/layout/activity_hotelprofileuserview.xml
+++ b/mobile/GAHDSE241F-tourio/app/src/main/res/layout/activity_hotelprofileuserview.xml
@@ -73,7 +73,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:textSize="22sp"
+                    android:textSize="16dp"
                     android:lineHeight="30dp"
                     android:textStyle="bold"
                     android:textColor="#FFFFFF"
@@ -123,175 +123,28 @@
                 android:textSize="14dp"
                 android:layout_marginBottom="16dp" />
 
-            <!-- Popular Tours-->
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Published Tours"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 android:layout_marginBottom="6dp" />
 
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Hotel Completed Tours"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp" />
-
-            <HorizontalScrollView
+            <androidx.core.widget.NestedScrollView
+                xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scrollbars="none">
+                android:layout_height="match_parent"
+                android:fillViewport="true">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/hotelProfileToursRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingVertical="16dp"
+                    tools:listitem="@layout/tour_card_item" />
+            </androidx.core.widget.NestedScrollView>
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="180dp"
-                        android:layout_height="220dp"
-                        android:layout_marginEnd="0dp"
-                        app:cardCornerRadius="10dp"
-                        app:cardElevation="5dp"
-                        app:cardBackgroundColor="#FFFFFF"
-                        app:cardUseCompatPadding="true">
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:padding="8dp"
-                            android:clipToOutline="true">
-
-                            <ImageView
-                                android:id="@+id/tour_image2"
-                                android:layout_width="match_parent"
-                                android:layout_height="100dp"
-                                android:layout_alignParentTop="true"
-                                android:src="@drawable/img_ninearch_1"
-                                android:scaleType="centerCrop"
-                                android:clipToOutline="true"
-                                tools:ignore="DuplicateIds" />
-
-                            <ImageView
-                                android:layout_width="22dp"
-                                android:layout_height="22dp"
-                                android:padding="2dp"
-                                android:layout_alignParentEnd="true"
-                                android:layout_margin="8dp"
-                                android:background="@drawable/shape_rounded_button"
-                                android:src="@drawable/ic_bookmark"
-                                app:tint="@color/app_primary_color" />
-
-                            <TextView
-                                android:id="@+id/home_item_title"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@id/tour_image2"
-                                android:layout_marginTop="8dp"
-                                android:text="Ella / Demodara"
-                                android:textStyle="bold"
-                                android:textSize="16sp"
-                                tools:ignore="DuplicateIds" />
-
-                            <TextView
-                                android:id="@+id/home_item_subtitle"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@id/home_item_title"
-                                android:text="Ella, Lil Addam's Peak"
-                                android:textSize="11sp"
-                                android:textColor="#888888"
-                                tools:ignore="DuplicateIds" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@id/home_item_subtitle"
-                                android:text="LKR 125,000"
-                                android:textStyle="bold"
-                                android:textSize="14sp"
-                                android:textColor="#1D1D1D" />
-                        </RelativeLayout>
-
-                    </androidx.cardview.widget.CardView>
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="180dp"
-                        android:layout_height="220dp"
-                        android:layout_marginEnd="0dp"
-                        app:cardCornerRadius="10dp"
-                        app:cardElevation="5dp"
-                        app:cardBackgroundColor="#FFFFFF"
-                        app:cardUseCompatPadding="true">
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:padding="8dp"
-                            android:clipToOutline="true">
-
-                            <ImageView
-                                android:id="@+id/tour_image2"
-                                android:layout_width="match_parent"
-                                android:layout_height="100dp"
-                                android:layout_alignParentTop="true"
-                                android:src="@drawable/img_sigiriya_1"
-                                android:scaleType="centerCrop"
-                                android:clipToOutline="true"
-                                tools:ignore="DuplicateIds" />
-
-                            <ImageView
-                                android:layout_width="22dp"
-                                android:layout_height="22dp"
-                                android:padding="2dp"
-                                android:layout_alignParentEnd="true"
-                                android:layout_margin="8dp"
-                                android:background="@drawable/shape_rounded_button"
-                                android:src="@drawable/ic_bookmark"
-                                app:tint="@color/app_primary_color" />
-
-                            <TextView
-                                android:id="@+id/home_item_title"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@id/tour_image2"
-                                android:layout_marginTop="8dp"
-                                android:text="Sigiriya / Matale"
-                                android:textStyle="bold"
-                                android:textSize="16sp"
-                                tools:ignore="DuplicateIds" />
-
-                            <TextView
-                                android:id="@+id/home_item_subtitle"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@id/home_item_title"
-                                android:text="Matale / Dambulla Area"
-                                android:textSize="11sp"
-                                android:textColor="#888888"
-                                tools:ignore="DuplicateIds" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@id/home_item_subtitle"
-                                android:text="LKR 125,000"
-                                android:textStyle="bold"
-                                android:textSize="14sp"
-                                android:textColor="#1D1D1D" />
-                        </RelativeLayout>
-
-                    </androidx.cardview.widget.CardView>
-
-
-                </LinearLayout>
-            </HorizontalScrollView>
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
