--- a/mobile/GAHDSE241F-tourio/app/src/main/res/layout/tour_card_item.xml
+++ b/mobile/GAHDSE241F-tourio/app/src/main/res/layout/tour_card_item.xml
@@ -1,89 +1,79 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="190dp"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginEnd="0dp"
+    android:layout_width="180dp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginEnd="4dp"
+    android:layout_marginStart="4dp"
+    xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="10dp"
     app:cardElevation="5dp"
     app:cardBackgroundColor="#FFFFFF"
     app:cardUseCompatPadding="true">
 
-    <RelativeLayout
+        <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
+        android:layout_height="wrap_content"
         android:clipToOutline="true">
 
-        <!-- Use LinearLayout with horizontal orientation -->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:weightSum="1">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            <!-- Image on the left side -->
             <ImageView
                 android:id="@+id/preDefTourCardImage"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.4"
+                android:layout_width="match_parent"
+                android:layout_height="135dp"
                 android:scaleType="centerCrop"
                 android:clipToOutline="true"
                 tools:ignore="DuplicateIds" />
 
-            <!-- Text content on the right side -->
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingVertical="20dp"
-                android:paddingLeft="18dp"
-                android:gravity="top">
+                android:padding="8dp"
+                android:gravity="start">
 
-            <!-- Title -->
-            <TextView
-                android:id="@+id/preDefTourCardTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                tools:ignore="DuplicateIds"
-                android:layout_marginBottom="8dp"/>
+                <TextView
+                    android:id="@+id/preDefTourCardTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textSize="13sp"
+                    android:textColor="#000000"
+                    tools:ignore="DuplicateIds"
+                    android:layout_marginBottom="4dp"/>
 
-            <!-- Description -->
-            <TextView
-                android:id="@+id/preDefTourCardDes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="13sp"
-                android:textColor="#888888"
-                tools:ignore="DuplicateIds"
-                android:layout_marginBottom="8dp"/>
+                <TextView
+                    android:id="@+id/preDefTourCardDes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="11sp"
+                    android:textColor="#888888"
+                    tools:ignore="DuplicateIds"
+                    android:layout_marginBottom="8dp"/>
 
-            <!-- Price -->
-            <TextView
-                android:id="@+id/preDefTourCardPrice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textSize="17sp"
-                android:textColor="#1D1D1D" />
+                <TextView
+                    android:id="@+id/preDefTourCardPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textSize="13sp"
+                    android:textColor="#1D1D1D" />
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
 
-    <!-- Bookmark button (optional, at the top-right corner) -->
-    <ImageView
-        android:layout_width="22dp"
-        android:layout_height="22dp"
-        android:padding="2dp"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="8dp"
-        android:background="@drawable/shape_rounded_button"
-        android:src="@drawable/ic_bookmark"
-        app:tint="@color/app_primary_color" />
+        <ImageView
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:padding="2dp"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="8dp"
+            android:background="@drawable/shape_rounded_button"
+            android:src="@drawable/ic_bookmark"
+            app:tint="@color/app_primary_color" />
 
-</RelativeLayout>
+        </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
