--- a/frontend/tourio/src/pages/homepage/homepage.css
+++ b/frontend/tourio/src/pages/homepage/homepage.css
@@ -13,10 +13,7 @@ body {
 }
 
 .page-content {
-  width: 100%;
-  padding: 20px 80px;
   margin-top: 20px;
-  display: flex;
   flex-direction: column;
   gap: 20px;
 }
@@ -61,11 +58,12 @@ body {
 }
 
 .tours-container {
-  background-color: #f8f9fa;
+  background-color: #ffffff;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .tour-list {
@@ -94,5 +92,67 @@ body {
   font-weight: 400;
   color: #555;
   margin: 0 auto;
+}
+
+.goto-reqpage-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  border-radius: 12px;
+  border: 1px solid #e1e4e8;
+  background-color: #f9f9f9;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin-left: 120px;
+  margin-right: 120px;
+}
+
+.goto-reqpage-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.goto-reqpage-title {
+  margin: 0;
+  font-size: 20px;
+  font-weight: 600;
+  color: #333;
+}
+
+.goto-reqpage-subtext {
+  margin: 8px 0 0;
+  font-size: 14px;
+  color: #7a7a7a;
+}
+
+
+.goto-reqpage-button {
+  display: flex;
+  align-items: center;
+  padding: 15px 30px;
+  border-radius: 20px;
+  background-color: transparent;
+  color: rgb(24, 24, 24);
+  border: 2px solid #181818;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 500;
+  transition: background-color 0.3s ease;
+}
+
+.goto-reqpage-button .search-icon {
+  size: 16px;
+  margin-right: 12px;
+}
+
+.gotoreq-btn-icon {
+  size: 20px;
+}
+
+.goto-reqpage-button:hover {
+  border: none;
+  background-color: rgb(19, 19, 19);
+  color: white;
 }
 
