--- a/mobile/GAHDSE241F-tourio/app/src/main/res/layout/activity_tourrequestpage.xml
+++ b/mobile/GAHDSE241F-tourio/app/src/main/res/layout/activity_tourrequestpage.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="#FFFFFF"
     android:paddingHorizontal="35dp"
@@ -21,11 +21,35 @@
 
     <Button
         android:id="@+id/newRequestButton"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Add New Request"
-        android:drawableLeft="@drawable/ic_forward_arrow"
+        android:drawableLeft="@drawable/ic_add"
         android:textColor="@color/white"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="Your Published Requests"
+        android:textSize="16dp"
+        android:textStyle="bold"
+        android:textColor="#000000"
+        android:gravity="center_vertical" />
+
+    <androidx.core.widget.NestedScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/pubreqrecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingVertical="10dp"
+            tools:listitem="@layout/request_card_item" />
+    </androidx.core.widget.NestedScrollView>
 
 
 
