--- a/frontend/tourio/src/pages/homepage/homepage.css
+++ b/frontend/tourio/src/pages/homepage/homepage.css
@@ -29,8 +29,8 @@ body {
   width: 550px;
   padding: 16px 24px;
   border-radius: 18px; 
-  border: 0px solid #ccc;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  border: 1px solid #aaaaaa;
+  box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.2);
   font-size: 16px;
 }
 
