--- a/frontend/tourio/src/components/tourcomponent.css
+++ b/frontend/tourio/src/components/tourcomponent.css
@@ -74,7 +74,7 @@
   
   .tour-price {
     font-size: 16px;
-    font-weight: 500;
+    font-weight: bold;
     color: #333;
     margin: 8px 0;
   }
