--- a/mobile/GAHDSE241F-tourio/app/src/main/res/layout/activity_travelerprofile.xml
+++ b/mobile/GAHDSE241F-tourio/app/src/main/res/layout/activity_travelerprofile.xml
@@ -82,73 +82,25 @@
             android:layout_height="wrap_content"
             android:scrollbars="none">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+            <androidx.core.widget.NestedScrollView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fillViewport="true">
 
-                <!-- Popular Tours Listing-->
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="180dp"
-                    android:layout_height="220dp"
-                    android:layout_marginEnd="0dp"
-                    app:cardCornerRadius="10dp"
-                    app:cardElevation="5dp"
-                    app:cardBackgroundColor="#FFFFFF"
-                    app:cardUseCompatPadding="true">
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/travelerProfileToursRecyclerView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingVertical="10dp"
+                        tools:listitem="@layout/tour_card_item" />
+                </HorizontalScrollView>
+            </androidx.core.widget.NestedScrollView>
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:padding="8dp"
-                        android:clipToOutline="true">
-
-                        <ImageView
-                            android:id="@+id/tour_image2"
-                            android:layout_width="match_parent"
-                            android:layout_height="100dp"
-                            android:layout_alignParentTop="true"
-                            android:src="@drawable/img_sigiriya_1"
-                            android:scaleType="centerCrop"
-                            android:clipToOutline="true"
-                            tools:ignore="DuplicateIds" />
-
-                        <!-- Title Below the Image -->
-                        <TextView
-                            android:id="@+id/home_item_title"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/tour_image2"
-                            android:layout_marginTop="8dp"
-                            android:text="Sigiriya : Ongoing"
-                            android:textStyle="bold"
-                            android:textSize="15dp"
-                            tools:ignore="DuplicateIds" />
-
-                        <TextView
-                            android:id="@+id/home_item_subtitle"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/home_item_title"
-                            android:text="Matale / Dambulla Area"
-                            android:textSize="11sp"
-                            android:textColor="#888888"
-                            tools:ignore="DuplicateIds" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_below="@id/home_item_subtitle"
-                            android:text="64% Complete"
-                            android:textStyle="bold"
-                            android:textSize="14sp"
-                            android:textColor="#1D1D1D" />
-                    </RelativeLayout>
-
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
         </HorizontalScrollView>
 
         <TextView
