--- a/mobile/GAHDSE241F-tourio/app/src/main/res/layout/activity_booktour.xml
+++ b/mobile/GAHDSE241F-tourio/app/src/main/res/layout/activity_booktour.xml
@@ -60,6 +60,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
+                <TextView
+                    android:id="@+id/tourdetailshotelID"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"/>
+
             </LinearLayout>
 
             <LinearLayout
