--- a/frontend/tourio/src/pages/singuppage/singuppage.css
+++ b/frontend/tourio/src/pages/singuppage/singuppage.css
@@ -22,7 +22,7 @@ body {
 
 .signup-wrapper {
   width: 100%;
-  max-width: 1100px;
+  max-width: 1200px;
   background-color: rgb(255, 255, 255);
   border-radius: 12px;
   overflow: hidden;
@@ -31,14 +31,14 @@ body {
 .signup-content {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  min-height: 600px;
+  min-height: 800px;
 }
 
 .signup-form {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-right: 100px;
+  padding: 0px 50px;
 }
 
 .signup-header {
